# asteroid

./: CMakeLists.txt  README.md
src/: audio.c  audio.h  camera2D.c  camera2D.h  color.h  engine.c  engine.h  framebuffer.c  framebuffer.h  main.c  platform.c  platform.h  projection.c  projection.h  quad.c  quad.h  quad2D.c  quad2D.h  rasterizer.c  rasterizer.h  sprite.h  texture.c  texture.h  transform2D.c  transform2D.h  v2.h  v3.h  v4.h  vertex.h
